src/Major Assignment/objects/Transaction_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transaction Entries</relationshipLabel>
        <relationshipName>Transaction_Entries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TX-{00000}</displayFormat>
        <label>TX Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Maximum_Debit_Allowed_per_day</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL(Type__c, &apos;Debit&apos;), Amount__c  &gt;= Contact__r.Transaction_Limit__r.Maximum_Debit_Allowed_per_Day__c)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Maximum debit allowed per day 30000 only</errorMessage>
    </validationRules>
</CustomObject>